--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <title>Webstudio</title>
   </head>
   <body>
+
+    <!-- Header -->
+
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
@@ -28,14 +31,14 @@
             >Web<span class="header-logo-part link">Studio</span>
           </a>
           <ul class="header-menu list">
-            <li class="header-menu-item-studio">
+            <li class="header-menu-item">
               <a class="header-menu-link link" href="./index.html">Studio</a>
             </li>
-            <li class="header-menu-item-studio">
+            <li class="header-menu-item">
               <a class="header-menu-link link" href="">Portfolio</a>
             </li>
-            <li class="header-menu-item-studio">
-              <a class="header-menu-link link" href="">Contacts</a>
+            <li class="header-menu-item">
+              <a class="header-menu-link link" href="">Contacts </a>
             </li>
           </ul>
         </nav>
@@ -63,17 +66,28 @@
       </div>
     </header>
     <main>
+
+      <!-- Hero -->
+
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-buy-btn" type="button">Order Service</button>
         </div>
       </section>
+
+      <!-- Features -->
+
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitles">Strategy</h3>
               <p class="features-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,6 +95,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitles">Punctuality</h3>
               <p class="features-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +107,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitles">Diligence</h3>
               <p class="features-item-text">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +119,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitles">Technologies</h3>
               <p class="features-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -104,6 +133,9 @@
           </ul>
         </div>
       </section>
+
+      <!-- Team -->
+
       <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
@@ -119,6 +151,25 @@
               <div class="name-pos">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="team-social-networks">
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -132,6 +183,25 @@
               <div class="name-pos">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
+                <ul class="team-social-networks">
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -145,6 +215,25 @@
               <div class="name-pos">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
+                <ul class="team-social-networks">
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -158,16 +247,39 @@
               <div class="name-pos">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
+                <ul class="team-social-networks">
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                  </li>
+                  <li>
+                    <svg class="team-soc-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- Portfolio -->
+
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our portfolio</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/banking-app-img-1.jpg"
@@ -175,12 +287,17 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+              <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Banking App</h3>
                 <p class="portfolio-service-description">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/cashless-payment-img-2.jpg"
@@ -188,12 +305,17 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Cashless Payment</h3>
                 <p class="portfolio-service-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/meditation-app-img-3.jpg"
@@ -201,12 +323,17 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Meditation App</h3>
                 <p class="portfolio-service-description">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/taxi-service-img-4.jpg"
@@ -214,12 +341,17 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Taxi Service</h3>
                 <p class="portfolio-service-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/screen-illustrations-img-5.jpg"
@@ -227,12 +359,17 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Screen Illustrations</h3>
                 <p class="portfolio-service-description">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img
                 class="portfolio-img"
                 src="./images/online-courses-img-6.jpg"
@@ -240,6 +377,10 @@
                 width="360"
                 height="300"
               />
+              <div class="portfolio-text-wrap">
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
               <div class="port-serv-descr">
                 <h3 class="portfolio-service">Online Courses</h3>
                 <p class="portfolio-service-description">Marketing</p>
@@ -249,6 +390,9 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer -->
+
     <footer class="footer">
       <div class="container footer-container">
         <a class="footer-logo link" href="./index.html"
@@ -258,6 +402,35 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-social-box">
+        <p class="footer-social">Social madia</p>
+        <ul class="footer-soc">
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg width="24" height="24" class="svg-footer"></svg>
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg width="24" height="24" class="svg-footer"></svg>
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg width="24" height="24" class="svg-footer"></svg>
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg width="24" height="24" class="svg-footer"></svg>
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
