--- a/index.html
+++ b/index.html
@@ -454,46 +454,48 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-logo-part link">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-social-box">
-        <p class="footer-social">Social madia</p>
-        <ul class="footer-soc">
-          <li class="footer-soc-item">
-            <a class="footer-soc-link">
-              <svg width="24" height="24" class="svg-footer">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link">
-              <svg width="24" height="24" class="svg-footer">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link">
-              <svg width="24" height="24" class="svg-footer">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link">
-              <svg width="24" height="24" class="svg-footer">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="footer-container-box">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-part link">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-box">
+          <p class="footer-social">Social madia</p>
+          <ul class="footer-soc">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link">
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link">
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link">
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link">
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
