--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
           </p>
         </div>
         <div class="footer-social-box">
-          <p class="footer-social">Social madia</p>
+          <p class="footer-social">Social media</p>
           <ul class="footer-soc">
             <li class="footer-soc-item">
               <a class="footer-soc-link">
