--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
