--- a/index.html
+++ b/index.html
@@ -467,28 +467,28 @@
           <p class="footer-social">Social media</p>
           <ul class="footer-soc">
             <li class="footer-soc-item">
-              <a class="footer-soc-link">
+              <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a class="footer-soc-link">
+              <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a class="footer-soc-link">
+              <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a class="footer-soc-link">
+              <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
