--- a/index.html
+++ b/index.html
@@ -469,28 +469,28 @@
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
                 <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
