--- a/index.html
+++ b/index.html
@@ -153,28 +153,28 @@
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -196,28 +196,28 @@
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,28 +239,28 @@
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -282,28 +282,28 @@
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-net-list">
                     <a class="team-soc-net-link" href="">
                       <svg class="team-soc-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
