--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="header-menu list">
             <li class="header-menu-item">
-              <a class="header-menu-link link" href="./index.html">Studio</a>
+              <a class="header-menu-link current link " href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
               <a class="header-menu-link link" href="">Portfolio</a>
